--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+monitor_speed = 115200
 lib_extra_dirs = ~/Documents/Arduino/libraries
