No longer need server templating

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,6 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
 lib_extra_dirs = ~/Documents/Arduino/libraries
-lib_deps = 
-; arduinoJson
-bblanchon/ArduinoJson@^6.21.2
+; lib_deps = 
+; ; arduinoJson
+; bblanchon/ArduinoJson@^6.21.2
