--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,5 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
 lib_extra_dirs = ~/Documents/Arduino/libraries
-; lib_deps = 
-; ; arduinoJson
-; bblanchon/ArduinoJson@^6.21.2
+; lib_deps = ESP Async WebServer
+; 	arduino-libraries/Arduino_JSON @ 0.1.0
